// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Condition Card Day day mode should render correctly 1`] = `
<View
  className="flex-row justify-between gap-4 py-4  rounded-xl drop-shadow"
  style={
    {
      "backgroundColor": "#fff",
    }
  }
>
  <View
    className="flex-1 flex-col gap-2"
  >
    <Image
      className="h-40"
      resizeMode="contain"
      source={
        {
          "uri": "icon1",
        }
      }
    />
    <Text
      className="text-center font-bold color-slate-600 text-xl px-4 pb-4"
    >
      Sunny
    </Text>
  </View>
  <View
    className="flex-none gap-8 py-8 pr-8 align-end justify-start"
  >
    <Text
      className="text-right font-bold color-slate-600 text-4xl"
    >
      23.4
    </Text>
    <View>
      <Text
        className="text-right font-semibold color-slate-500 text-xl "
      >
        Feels Like
      </Text>
      <Text
        className="text-right font-bold color-slate-600 text-2xl"
      >
        22.4
      </Text>
    </View>
  </View>
  <Text
    className="absolute bottom-0 right-0 text-right font-bold color-slate-600 text-xl mb-8 mr-8"
  >
    Day
  </Text>
</View>
`;

exports[`Condition Card Night night mode should render correctly 1`] = `
<View
  className="flex-row justify-between gap-4 py-4  rounded-xl drop-shadow"
  style={
    {
      "backgroundColor": "#000",
    }
  }
>
  <View
    className="flex-1 flex-col gap-2"
  >
    <Image
      className="h-40"
      resizeMode="contain"
      source={
        {
          "uri": "icon1",
        }
      }
    />
    <Text
      className="text-center font-bold color-slate-600 text-xl px-4 pb-4"
    >
      Sunny
    </Text>
  </View>
  <View
    className="flex-none gap-8 py-8 pr-8 align-end justify-start"
  >
    <Text
      className="text-right font-bold color-slate-600 text-4xl"
    >
      23.4
    </Text>
    <View>
      <Text
        className="text-right font-semibold color-slate-500 text-xl "
      >
        Feels Like
      </Text>
      <Text
        className="text-right font-bold color-slate-600 text-2xl"
      >
        22.4
      </Text>
    </View>
  </View>
  <Text
    className="absolute bottom-0 right-0 text-right font-bold color-slate-600 text-xl mb-8 mr-8"
  >
    Night
  </Text>
</View>
`;

exports[`Condition Card without colors without colors should render correctly 1`] = `
<View
  className="flex-row justify-between gap-4 py-4  rounded-xl drop-shadow"
  style={
    {
      "backgroundColor": "#E2E8F0",
    }
  }
>
  <View
    className="flex-1 flex-col gap-2"
  >
    <Image
      className="h-40"
      resizeMode="contain"
      source={
        {
          "uri": "icon1",
        }
      }
    />
    <Text
      className="text-center font-bold color-slate-600 text-xl px-4 pb-4"
    >
      Sunny
    </Text>
  </View>
  <View
    className="flex-none gap-8 py-8 pr-8 align-end justify-start"
  >
    <Text
      className="text-right font-bold color-slate-600 text-4xl"
    >
      23.4
    </Text>
    <View>
      <Text
        className="text-right font-semibold color-slate-500 text-xl "
      >
        Feels Like
      </Text>
      <Text
        className="text-right font-bold color-slate-600 text-2xl"
      >
        22.4
      </Text>
    </View>
  </View>
  <Text
    className="absolute bottom-0 right-0 text-right font-bold color-slate-600 text-xl mb-8 mr-8"
  >
    Night
  </Text>
</View>
`;

exports[`Condition Card without icon without icon should render correctly 1`] = `
<View
  className="flex-row justify-between gap-4 py-4  rounded-xl drop-shadow"
  style={
    {
      "backgroundColor": "#E2E8F0",
    }
  }
>
  <View
    className="flex-1 flex-col gap-2"
  >
    <Image
      className="h-40"
      resizeMode="contain"
      source={
        {
          "uri": "",
        }
      }
    />
    <Text
      className="text-center font-bold color-slate-600 text-xl px-4 pb-4"
    >
      Sunny
    </Text>
  </View>
  <View
    className="flex-none gap-8 py-8 pr-8 align-end justify-start"
  >
    <Text
      className="text-right font-bold color-slate-600 text-4xl"
    >
      23.4
    </Text>
    <View>
      <Text
        className="text-right font-semibold color-slate-500 text-xl "
      >
        Feels Like
      </Text>
      <Text
        className="text-right font-bold color-slate-600 text-2xl"
      >
        22.4
      </Text>
    </View>
  </View>
  <Text
    className="absolute bottom-0 right-0 text-right font-bold color-slate-600 text-xl mb-8 mr-8"
  >
    Night
  </Text>
</View>
`;
